--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
 
 			<!-- Any section element inside of this container is displayed as a slide -->
-			<div class="slides" data-remove-aside data-move-aside>
+			<div class="slides" data-captions-aside>
         <section>
           <section>
             <h1>Demystifying Ajax Callback Commands</h1>
