Update presentation for d8 day

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="footer">
         <div class="branding--logo">
             <span class="logo__image"><img src="images/conference_logo.png" alt="Conference logo" height="55px" /></span>
-            <p class="logo__site-name">#DrupalCon</p>
+            <p class="logo__site-name">#Drupal</p>
         </div>
         <div class="company--logo">
             <span class="logo__image"><img src="images/genuine_logo_white.png" alt="Genuine" height="40px" width="40px" /></span>
@@ -62,8 +62,6 @@
           <section>
             <h1>Demystifying Ajax Callback Commands</h1>
             <h2>(in Drupal 8)</h2>
-            <p><a href="//events.drupal.org/neworleans2016/sessions/demystifying-ajax-callback-commands-drupal-8" target="_blank">events.drupal.org/node/8466</a></p>
-            <p>Drupalcon 2016</p>
           </section>
           <section data-transition="convex">
             <h2>Mike Miles</h2>
@@ -783,16 +781,16 @@ class DbLogController extends ControllerBase {
           <section>
             <h2>Resources</h2>
             <p>Drupal 8 Ajax Framework: <a href="//bit.ly/Drupal8Ajax" target="_blank" alt="Drupal 8 Ajax Framework">bit.ly/Drupal8Ajax</a></p>
-            <p>This Presentation: <a href="//bit.ly/Con16Ajax" target="_blank" alt="This presentation">bit.ly/Con16Ajax</a></p>
-            <p>Presentation Slides: <a href="//bit.ly/Con16AjaxSlides" target="_blank" alt="Presentation slides">bit.ly/Con16AjaxSlides</a></p>
-            <p>Example Code: <a href="//bit.ly/Con16AjaxCode" target="_blank" alt="Example Code">bit.ly/Con16AjaxCode</a></p>
+            <p>This Presentation: <a href="//bit.ly/D8DAjax" target="_blank" alt="This presentation">bit.ly/D8DAjax</a></p>
+            <p>Presentation Slides: <a href="//bit.ly/D8DAjaxSlides" target="_blank" alt="Presentation slides">bit.ly/D8DAjaxSlides</a></p>
+            <p>Example Code: <a href="//bit.ly/D8DAjaxCode" target="_blank" alt="Example Code">bit.ly/D8DAjaxCode</a></p>
             <p>Creating Commands in D8: <a href="//bit.ly/D8AjaxCmds" target="_blank" alt="How to create callback commands">bit.ly/D8AjaxCmds</a></p>
             <p>My Blog: <a href="//mike-miles.com" target="_blank" alt="Mike Miles Blog">mike-miles.com</a></p>
           </section>
           <section data-transition="convex">
             <h1>Feedback</h1>
             <h3><a href="http://www.twitter.com/mikemiles86">@mikemiles86</a></h3>
-            <h3 data-set-aside data-skip-print>#DrupalCon</h3>
+            <h3 data-set-aside data-skip-print>#Drupal</h3>
           </section>
         </section>
         <section>
