--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="footer">
         <div class="branding--logo">
             <span class="logo__image"><img src="images/conference_logo.png" alt="Conference logo" height="55px" /></span>
-            <p class="logo__site-name">#Drupal</p>
+            <p class="logo__site-name">#Drupal8Day</p>
         </div>
         <div class="company--logo">
             <span class="logo__image"><img src="images/genuine_logo_white.png" alt="Genuine" height="40px" width="40px" /></span>
@@ -97,21 +97,7 @@
           <section>
             <h2>Defining Callback Commands</h2>
           </section>
-          <section data-transition="fade" data-background="images/beignets.jpg" data-background-image="images/beignets.jpg" data-background-size="100%" data-credit="https://www.flickr.com/photos/tomorrowgirl/8055215121" data-background-repeat="repeat" data-set-aside data-skip-print>
-            <p class="overlay-text">
-              <span>If an Ajax request were a beignet...</span>
-              <br />
-              <span>Callback commands would be the powdered sugar.</span>
-              </p>
-              <aside class="notes">
-                <ul>
-                  <li>Who has had one?</li>
-                  <li>what are they? what does sugar add?</li>
-                  <li>what are commands to ajax?</li>
-                </ul>
-              </aside>
-          </section>
-          <section data-transition="fade" data-background="images/beignets_blur.jpg" data-background-image="images/beignets_blur.jpg" data-background-size="100%" data-background-repeat="repeat" data-credit="https://www.flickr.com/photos/tomorrowgirl/8055215121">
+          <section data-transition="convex">
             <p class="overlay-text">
               <span>Instructions built by the <em>Server</em> and</span>
               <br />
@@ -790,7 +776,7 @@ class DbLogController extends ControllerBase {
           <section data-transition="convex">
             <h1>Feedback</h1>
             <h3><a href="http://www.twitter.com/mikemiles86">@mikemiles86</a></h3>
-            <h3 data-set-aside data-skip-print>#Drupal</h3>
+            <h3 data-set-aside data-skip-print>#Drupal8Day</h3>
           </section>
         </section>
         <section>
