--- a/index.html
+++ b/index.html
@@ -97,7 +97,20 @@
           <section>
             <h2>Defining Callback Commands</h2>
           </section>
-          <section data-transition="convex">
+          <section data-transition="fade" data-background="images/cupcakes.jpg" data-background-image="images/cupcakes.jpg" data-background-size="100%" data-background-repeat="repeat" data-set-aside data-skip-print>
+            <p class="overlay-text">
+              <span>If an Ajax request were a cupcake...</span>
+              <br />
+              <span>Callback commands would be the frosting.</span>
+              </p>
+              <aside class="notes">
+                <ul>
+                  <li>what are they? what does frosting add?</li>
+                  <li>what are commands to ajax?</li>
+                </ul>
+              </aside>
+          </section>
+          <section data-transition="fade" data-background="images/cupcakes_blur.jpg" data-background-image="images/cupcakes_blur.jpg" data-background-size="100%" data-background-repeat="repeat">
             <p class="overlay-text">
               <span>Instructions built by the <em>Server</em> and</span>
               <br />
@@ -769,9 +782,8 @@ class DbLogController extends ControllerBase {
             <p>Drupal 8 Ajax Framework: <a href="//bit.ly/Drupal8Ajax" target="_blank" alt="Drupal 8 Ajax Framework">bit.ly/Drupal8Ajax</a></p>
             <p>This Presentation: <a href="//bit.ly/D8DAjax" target="_blank" alt="This presentation">bit.ly/D8DAjax</a></p>
             <p>Presentation Slides: <a href="//bit.ly/D8DAjaxSlides" target="_blank" alt="Presentation slides">bit.ly/D8DAjaxSlides</a></p>
-            <p>Example Code: <a href="//bit.ly/D8DAjaxCode" target="_blank" alt="Example Code">bit.ly/D8DAjaxCode</a></p>
+            <p>Ajax Dblog: <a href="//bit.ly/AjaxDblog" target="_blank" alt="ajax Dblog Module">bit.ly/AjaxDblog</a></p>
             <p>Creating Commands in D8: <a href="//bit.ly/D8AjaxCmds" target="_blank" alt="How to create callback commands">bit.ly/D8AjaxCmds</a></p>
-            <p>My Blog: <a href="//mike-miles.com" target="_blank" alt="Mike Miles Blog">mike-miles.com</a></p>
           </section>
           <section data-transition="convex">
             <h1>Feedback</h1>
