--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <section data-transition="convex">
             <h2>Mike Miles</h2>
             <p>Genuine (<a href="//wearegenuine.com" target="_blank">wearegenuine.com</a>)</p>
+            <p>The Developing Up Podcast (<a href="//developingup.com" target="_blank">developingup.com</a>)</p>
             <p>All the internet places: <a href="//twitter.com/mikemiles86" target="_blank">mikemiles86</a></p>
             <aside class="notes">
               <ul>
